feat: My Courses & My Programs switcher
- The Courses tab is renamed to Learn.
- The Programs tab is removed from the tab bar.

fixes: LEARNER-8892

--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -12,4 +12,12 @@
     <string name="label_confirm">Confirm</string>
     <!-- Alert dialog reject button label -->
     <string name="label_reject">Reject</string>
+
+    <!-- Main dashboard screen-->
+    <!-- Title of Learn tab on main dashboard screen -->
+    <string name="label_learn">Learn</string>
+    <!-- Title of user's course list screen -->
+    <string name="label_my_courses">My Courses</string>
+    <!-- Title of user's programs list screen -->
+    <string name="label_my_programs">My Programs</string>
 </resources>
