refactor: Add indicator color for not selected tabs

--- a/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
+++ b/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
@@ -126,9 +126,10 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/toolbar_background_color"
+            android:background="@drawable/course_tabs_background"
+            app:tabGravity="start"
             app:tabIndicatorColor="@color/primaryBaseColor"
             app:tabIndicatorHeight="@dimen/edx_x_quarter_margin"
             app:tabMode="scrollable"
