--- a/OpenEdXMobile/res/layout/row_course_outline_list.xml
+++ b/OpenEdXMobile/res/layout/row_course_outline_list.xml
@@ -135,8 +135,8 @@
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/bulk_download"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     app:srcCompat="@drawable/ic_download" />
 
