refactor: Optimize code based on feedback

--- a/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
+++ b/OpenEdXMobile/res/layout/course_dashboard_toolbar.xml
@@ -127,15 +127,15 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/edx_button_height"
             android:background="@drawable/course_tabs_background"
             app:tabGravity="start"
             app:tabIndicatorColor="@color/primaryBaseColor"
             app:tabIndicatorHeight="@dimen/edx_x_quarter_margin"
             app:tabMode="scrollable"
-            app:tabPaddingBottom="@dimen/edx_half_margin"
-            app:tabPaddingEnd="@dimen/container_padding"
-            app:tabPaddingStart="@dimen/container_padding"
+            app:tabPaddingBottom="@dimen/widget_margin"
+            app:tabPaddingEnd="@dimen/widget_margin"
+            app:tabPaddingStart="@dimen/widget_margin"
             app:tabPaddingTop="@dimen/edx_half_margin"
             app:tabTextAppearance="@style/CourseTabItem"
             app:tabTextColor="@color/neutralXXDark" />
