--- a/OpenEdXMobile/res/layout-land/empty_screen_layout.xml
+++ b/OpenEdXMobile/res/layout-land/empty_screen_layout.xml
@@ -77,6 +77,7 @@
             app:backgroundTint="@color/secondaryBaseColor"
             app:icon="@drawable/ic_search"
             app:iconGravity="textStart"
+            app:iconPadding="@dimen/container_padding"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/vertical_guideline"
