feat: Added the support to render complex html in discussions
- Check and use webView based on complex html
- Uses textView if the rendering body only contains <p> tag

fix: LEARNER-9192

--- a/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
+++ b/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
@@ -38,7 +38,14 @@
                 <TextView
                     android:id="@+id/tvResponse"
                     style="@style/discussion_regular_text"
+                    android:visibility="gone"
                     tools:text="Post body" />
+
+                <org.edx.mobile.view.custom.EdxWebView
+                    android:id="@+id/webViewResponse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
