--- a/OpenEdXMobile/res/layout/row_discussion_responses_thread.xml
+++ b/OpenEdXMobile/res/layout/row_discussion_responses_thread.xml
@@ -10,10 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="3dp"
-        android:paddingEnd="@dimen/discussion_responses_box_padding"
         android:paddingStart="@dimen/discussion_responses_box_padding"
-        android:paddingTop="@dimen/discussion_responses_box_padding">
+        android:paddingTop="@dimen/discussion_responses_box_padding"
+        android:paddingEnd="@dimen/discussion_responses_box_padding"
+        android:paddingBottom="3dp">
 
 
         <LinearLayout
@@ -46,7 +46,14 @@
             android:id="@+id/discussion_responses_thread_row_body_text_view"
             style="@style/discussion_regular_text"
             android:layout_marginBottom="@dimen/discussion_responses_standard_margin"
+            android:visibility="gone"
             tools:text="Thread body" />
+
+        <org.edx.mobile.view.custom.EdxWebView
+            android:id="@+id/discussion_responses_thread_row_body_web_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/discussion_responses_thread_row_visibility_text_view"
