--- a/OpenEdXMobile/res/layout/row_discussion_comments_response.xml
+++ b/OpenEdXMobile/res/layout/row_discussion_comments_response.xml
@@ -19,9 +19,16 @@
         <include layout="@layout/row_discussion_user_profile" />
 
         <TextView
-            android:id="@+id/discussion_comment_body"
+            android:id="@+id/tv_discussion_comment_body"
             style="@style/discussion_regular_text"
+            android:visibility="gone"
             tools:text="This is the text of a response." />
+
+        <org.edx.mobile.view.custom.EdxWebView
+            android:id="@+id/wv_discussion_comment_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/discussion_comment_count_report_text_view"
