feat: Add Project OneTrust in Profile screen
Added a new privacy section in the user profile screen above the
help section. Tapping on each option in the privacy section opens
a webview for the corresponding option.

Fixes: LEARNER-9200

--- a/OpenEdXMobile/res/layout/fragment_account.xml
+++ b/OpenEdXMobile/res/layout/fragment_account.xml
@@ -231,6 +231,73 @@
                     android:background="@color/neutralXLight" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/container_privacy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selectable_rounded_box_overlay"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/edx_default_margin"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <TextView
+                    style="@style/profile_field_heading"
+                    android:text="@string/label_privacy" />
+
+                <TextView
+                    android:id="@+id/tv_privacy_policy"
+                    style="@style/profile_field_title"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/edx_half_margin"
+                    android:background="@drawable/selectable_rounded_box_overlay"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/edx_default_margin"
+                    android:paddingEnd="@dimen/edx_default_margin"
+                    android:text="@string/label_privacy_policy"
+                    android:visibility="gone"
+                    app:drawableEndCompat="@drawable/ic_chevron_right"
+                    app:drawableTint="@color/primaryBaseColor"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_cookie_policy"
+                    style="@style/profile_field_title"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/edx_half_margin"
+                    android:background="@drawable/selectable_rounded_box_overlay"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/edx_default_margin"
+                    android:paddingEnd="@dimen/edx_default_margin"
+                    android:text="@string/label_cookie_policy"
+                    android:visibility="gone"
+                    app:drawableEndCompat="@drawable/ic_chevron_right"
+                    app:drawableTint="@color/primaryBaseColor"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_data_consent_policy"
+                    style="@style/profile_field_title"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/edx_half_margin"
+                    android:background="@drawable/selectable_rounded_box_overlay"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/edx_default_margin"
+                    android:paddingEnd="@dimen/edx_default_margin"
+                    android:text="@string/label_do_not_sell_my_personal_data"
+                    android:visibility="gone"
+                    app:drawableEndCompat="@drawable/ic_chevron_right"
+                    app:drawableTint="@color/primaryBaseColor"
+                    tools:visibility="visible" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/edx_line"
+                    android:layout_marginTop="@dimen/edx_default_margin"
+                    android:background="@color/neutralXLight" />
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/tv_help"
                 style="@style/profile_field_heading"
