--- a/OpenEdXMobile/res/layout/empty_screen_layout.xml
+++ b/OpenEdXMobile/res/layout/empty_screen_layout.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/empty_screen_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="@dimen/edx_default_margin"
-    android:background="@drawable/white_roundedbg"
+    android:background="@drawable/white_rounded_borders"
     android:elevation="@dimen/edx_quarter_margin"
     android:fillViewport="true">
 
@@ -14,63 +14,37 @@
         android:layout_height="wrap_content">
 
         <FrameLayout
+            android:id="@+id/content_error_icon"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:background="@color/neutralXLight"
-            app:layout_constraintBottom_toTopOf="@id/guideline"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/content_error_icon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="@dimen/widget_margin_quadruple"
                 app:srcCompat="@drawable/ic_creative_process" />
         </FrameLayout>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.5" />
-
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/content_error_text"
+            style="@style/empty_state_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/widget_margin_x_double"
-            android:layout_marginTop="@dimen/widget_margin_x_double"
-            android:layout_marginEnd="@dimen/widget_margin_x_double"
-            android:fontFamily="?attr/fontSemiBold"
-            android:text="@string/find_course_text"
-            android:textAlignment="center"
-            android:textColor="@color/neutralBlackT"
-            android:textSize="@dimen/edx_xxx_large"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/guideline"
-            app:lineHeight="@dimen/edx_default_margin_double" />
+            app:layout_constraintTop_toBottomOf="@id/content_error_icon" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/content_error_action"
-            style="@style/edX.Widget.ActionBrandPillButton"
+            style="@style/EmptyStateButton"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/upgrade_now_button_height"
-            android:layout_margin="@dimen/widget_margin_x_double"
-            android:text="@string/find_course_btn_text"
-            android:textSize="@dimen/edx_large"
-            app:backgroundTint="@color/secondaryBaseColor"
-            app:icon="@drawable/ic_search"
-            app:iconGravity="textStart"
-            app:iconPadding="@dimen/container_padding"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/content_error_text"
-            app:layout_constraintVertical_bias="0.0"
-            app:lineHeight="@dimen/widget_margin_x_double" />
+            app:layout_constraintTop_toBottomOf="@id/content_error_text" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
