--- a/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
+++ b/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
@@ -35,17 +35,9 @@
                     tools:text="Post Title"
                     tools:visibility="visible" />
 
-                <TextView
-                    android:id="@+id/tvResponse"
-                    style="@style/discussion_regular_text"
-                    android:visibility="gone"
-                    tools:text="Post body" />
-
-                <org.edx.mobile.view.custom.EdxWebView
-                    android:id="@+id/webViewResponse"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone" />
+                <org.edx.mobile.view.custom.EdxDiscussionBody
+                    android:id="@+id/discussion_render_body"
+                    style="@style/discussion_regular_text" />
 
             </LinearLayout>
 
