feat: Added the support to render complex html in discussions (#1737)
feat: Added the support to render complex html in discussions

- Check and use webView based on complex html
- Uses textView if the rendering body only contains <p> tag

fix: LEARNER-9192

--- a/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
+++ b/OpenEdXMobile/res/layout/fragment_add_response_or_comment.xml
@@ -35,10 +35,9 @@
                     tools:text="Post Title"
                     tools:visibility="visible" />
 
-                <TextView
-                    android:id="@+id/tvResponse"
-                    style="@style/discussion_regular_text"
-                    tools:text="Post body" />
+                <org.edx.mobile.view.custom.EdxDiscussionBody
+                    android:id="@+id/discussion_render_body"
+                    style="@style/discussion_regular_text" />
 
             </LinearLayout>
 
