--- a/OpenEdXMobile/res/layout/row_discussion_responses_thread.xml
+++ b/OpenEdXMobile/res/layout/row_discussion_responses_thread.xml
@@ -10,11 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="3dp"
-        android:paddingEnd="@dimen/discussion_responses_box_padding"
         android:paddingStart="@dimen/discussion_responses_box_padding"
-        android:paddingTop="@dimen/discussion_responses_box_padding">
-
+        android:paddingTop="@dimen/discussion_responses_box_padding"
+        android:paddingEnd="@dimen/discussion_responses_box_padding"
+        android:paddingBottom="3dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,11 +41,10 @@
             android:layout_marginBottom="@dimen/discussion_responses_standard_margin"
             tools:text="Thread title" />
 
-        <TextView
-            android:id="@+id/discussion_responses_thread_row_body_text_view"
+        <org.edx.mobile.view.custom.EdxDiscussionBody
+            android:id="@+id/discussion_render_body"
             style="@style/discussion_regular_text"
-            android:layout_marginBottom="@dimen/discussion_responses_standard_margin"
-            tools:text="Thread body" />
+            android:layout_marginBottom="@dimen/discussion_responses_standard_margin" />
 
         <TextView
             android:id="@+id/discussion_responses_thread_row_visibility_text_view"
