--- a/OpenEdXMobile/res/layout/row_discussion_responses_response.xml
+++ b/OpenEdXMobile/res/layout/row_discussion_responses_response.xml
@@ -23,11 +23,10 @@
 
             <include layout="@layout/row_discussion_user_profile" />
 
-            <TextView
-                android:id="@+id/discussion_responses_comment_body_text_view"
+            <org.edx.mobile.view.custom.EdxDiscussionBody
+                android:id="@+id/discussion_render_body"
                 style="@style/discussion_regular_text"
-                android:layout_marginBottom="5dp"
-                tools:text="This is a response" />
+                android:layout_marginBottom="5dp" />
 
             <TextView
                 android:id="@+id/discussion_responses_answer_author_text_view"
