--- a/OpenEdXMobile/res/values/styles.xml
+++ b/OpenEdXMobile/res/values/styles.xml
@@ -583,10 +583,10 @@
     </style>
 
     <style name="EmptyStateButton" parent="edX.Widget.ActionBrandPillButton">
-        <item name="android:layout_height">@dimen/upgrade_now_button_height</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_margin">@dimen/widget_margin_x_double</item>
         <item name="android:text">@string/find_course_btn_text</item>
-        <item name="android:textSize">@dimen/edx_large</item>
+        <item name="android:textSize">@dimen/edx_x_large</item>
         <item name="backgroundTint">@color/secondaryBaseColor</item>
         <item name="icon">@drawable/ic_search</item>
         <item name="iconGravity">textStart</item>
