--- a/OpenEdXMobile/res/layout/fragment_account.xml
+++ b/OpenEdXMobile/res/layout/fragment_account.xml
@@ -231,6 +231,77 @@
                     android:background="@color/neutralXLight" />
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/container_privacy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selectable_rounded_box_overlay"
+                android:orientation="vertical"
+                android:paddingTop="@dimen/edx_default_margin"
+                android:visibility="gone"
+                tools:visibility="visible">
+
+                <TextView
+                    style="@style/profile_field_heading"
+                    android:paddingBottom="@dimen/edx_quarter_margin"
+                    android:text="@string/label_privacy" />
+
+                <TextView
+                    android:id="@+id/tv_privacy_policy"
+                    style="@style/profile_field_title"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/selectable_rounded_box_overlay"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/edx_default_margin"
+                    android:paddingTop="@dimen/edx_quarter_margin"
+                    android:paddingEnd="@dimen/edx_default_margin"
+                    android:paddingBottom="@dimen/edx_quarter_margin"
+                    android:text="@string/label_privacy_policy"
+                    android:visibility="gone"
+                    app:drawableEndCompat="@drawable/ic_chevron_right"
+                    app:drawableTint="@color/primaryBaseColor"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_cookie_policy"
+                    style="@style/profile_field_title"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/selectable_rounded_box_overlay"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/edx_default_margin"
+                    android:paddingTop="@dimen/edx_quarter_margin"
+                    android:paddingEnd="@dimen/edx_default_margin"
+                    android:paddingBottom="@dimen/edx_quarter_margin"
+                    android:text="@string/label_cookie_policy"
+                    android:visibility="gone"
+                    app:drawableEndCompat="@drawable/ic_chevron_right"
+                    app:drawableTint="@color/primaryBaseColor"
+                    tools:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/tv_data_consent_policy"
+                    style="@style/profile_field_title"
+                    android:layout_width="match_parent"
+                    android:background="@drawable/selectable_rounded_box_overlay"
+                    android:gravity="center_vertical"
+                    android:paddingStart="@dimen/edx_default_margin"
+                    android:paddingTop="@dimen/edx_quarter_margin"
+                    android:paddingEnd="@dimen/edx_default_margin"
+                    android:paddingBottom="@dimen/edx_quarter_margin"
+                    android:text="@string/label_do_not_sell_my_personal_data"
+                    android:visibility="gone"
+                    app:drawableEndCompat="@drawable/ic_chevron_right"
+                    app:drawableTint="@color/primaryBaseColor"
+                    tools:visibility="visible" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/edx_line"
+                    android:layout_marginTop="@dimen/widget_margin"
+                    android:background="@color/neutralXLight" />
+
+            </LinearLayout>
+
             <TextView
                 android:id="@+id/tv_help"
                 style="@style/profile_field_heading"
@@ -325,8 +396,8 @@
                 style="@style/profile_field_description"
                 android:layout_marginTop="@dimen/edx_default_margin"
                 android:layout_marginBottom="@dimen/edx_default_margin"
-                android:lineHeight="@dimen/edx_margin"
                 android:textSize="@dimen/edx_xx_small"
+                app:lineHeight="@dimen/edx_margin"
                 tools:text="Version X.X.X" />
 
             <LinearLayout
