--- a/OpenEdXMobile/res/layout/empty_screen_layout.xml
+++ b/OpenEdXMobile/res/layout/empty_screen_layout.xml
@@ -7,7 +7,7 @@
     android:layout_margin="@dimen/edx_default_margin"
     android:background="@drawable/white_rounded_borders"
     android:elevation="@dimen/edx_quarter_margin"
-    android:fillViewport="true">
+    android:scrollbars="none">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
