--- a/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
+++ b/OpenEdXMobile/res/layout/fragment_my_courses_list.xml
@@ -6,25 +6,36 @@
         android:id="@+id/content_error_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/neutralLight">
+        android:background="@color/neutralWhite">
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ListView
-                android:id="@+id/my_course_list"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:divider="@android:color/transparent"
-                android:dividerHeight="@dimen/widget_margin_half"
-                android:paddingTop="@dimen/widget_margin_half"
-                android:paddingBottom="@dimen/widget_margin_half"
-                android:drawSelectorOnTop="false"
-                android:listSelector="@android:color/transparent"
-                tools:listitem="@layout/row_course_list" />
+                android:layout_height="match_parent">
+
+                <ListView
+                    android:id="@+id/my_course_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:divider="@android:color/transparent"
+                    android:dividerHeight="@dimen/widget_margin_half"
+                    android:drawSelectorOnTop="false"
+                    android:listSelector="@android:color/transparent"
+                    android:paddingTop="@dimen/widget_margin_half"
+                    android:paddingBottom="@dimen/widget_margin_half"
+                    tools:listitem="@layout/row_course_list" />
+
+                <include
+                    android:id="@+id/empty_screen_layout"
+                    layout="@layout/empty_screen_layout"
+                    android:visibility="gone" />
+
+            </FrameLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <include
